<resources>
    <string name="app_name">DB2Limited_RateCurrency</string>
    <string name="Privat_Bank">Приват Банк</string>
    <string name="Purchase">Покупка</string>
    <string name="Sale">Продажа</string>
    <string name="NBU">НБУ</string>
    <string name="date_picker_nbu">Date picker NBU</string>
    <string name="date_picker_pb">Date picker PB</string>
    <string name="hintOnErrorData">Use top swipe to reload data</string>
    <string name="select_date">ВЫБЕРИТЕ ДАТУ</string>
    <string name="material_date_picker">MATERIAL_DATE_PICKER</string>
    <string name="USD">Долар США</string>
    <string name="EUR">Євро</string>
    <string name="RUB">Російський рубль</string>
    <string name="graph_hint">not implemented yet</string>
    <string name="select_date_hint">Выберите даты для построения графика</string>
    <string name="date_example">01.01.2020</string>
    <string name="date_exampleCBR">01/01/2020</string>
    <string name="graphic">График</string>
    <string name="rate_currency">Курсы валют</string>
    <string name="rub_usd_rate">Курс рубля к доллару</string>
    <string name="Currency">Валюта</string>

</resources>