<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_viewColorStatePB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_viewColorStateNBU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TableLayout
                android:id="@+id/tl_privatBank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/table_padding"
                android:paddingLeft="@dimen/small_padding"
                android:paddingRight="@dimen/small_padding">

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/Privat_Bank" />

                    <ImageView
                        android:id="@+id/iv_datePickerPB"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/image_height"
                        android:layout_gravity="end|center_vertical"
                        android:backgroundTint="@color/white"
                        android:contentDescription="@string/date_picker_nbu"
                        android:src="@drawable/ic_baseline_calendar_today_24" />

                    <EditText
                        android:id="@+id/et_datePB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:editable="false"
                        android:hint="@string/date_example"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TextView
                    android:id="@+id/tv_hintPB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/hintOnErrorData"
                    android:textAlignment="center"
                    android:visibility="gone" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F0F7F7"
                    android:padding="@dimen/small_padding">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Currency"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Purchase"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Sale"
                        android:textAlignment="center" />
                </TableRow>

                <ProgressBar
                    android:id="@+id/pb_progressBarPB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone" />
            </TableLayout>

            <LinearLayout
                android:id="@+id/ll_linearLayoutNBU"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tl_NationalBankHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/table_padding"
                    android:paddingLeft="@dimen/small_padding"
                    android:paddingRight="@dimen/small_padding">

                    <TableRow>

                        <TextView
                            android:id="@+id/tv_test"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/NBU" />

                        <ImageView
                            android:id="@+id/iv_datePickerNBU"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/image_height"
                            android:layout_gravity="center_vertical|end"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/date_picker_nbu"
                            android:src="@drawable/ic_baseline_calendar_today_24" />

                        <EditText
                            android:id="@+id/et_dateNBU"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:editable="false"
                            android:hint="@string/date_example"
                            android:textAlignment="textEnd" />
                    </TableRow>

                    <TextView
                        android:id="@+id/tv_hintNBU"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/hintOnErrorData"
                        android:textAlignment="center"
                        android:visibility="gone" />
                </TableLayout>

                <ProgressBar
                    android:id="@+id/pb_progressBarNBU"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nsv_scrollViewNBU"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:visibility="invisible">

                    <TableLayout
                        android:id="@+id/tl_NationalBank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/table_padding">

                    </TableLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>